--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "watch": "vue-cli-service build --watch"
   },
   "dependencies": {
+    "@tailwindcss/postcss7-compat": "^2.0.2",
+    "autoprefixer": "^9",
     "core-js": "^3.6.5",
+    "postcss": "^7",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "vue": "^2.6.11",
     "vue-router": "^3.5.2"
   },
@@ -20,9 +24,10 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11",
     "sass": "^1.43.3",
-    "sass-loader": "^10.2.0"
+    "sass-loader": "^10.2.0",
+    "vue-cli-plugin-tailwind": "~2.0.6",
+    "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
     "root": true,
